@@ -141,5 +141,7 @@
 0.2.6 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
 	* Added unlink(), mkdir(), rmdir(), and rename()
+	* Fixed several serious FAT errors with oflags handling (&& instead of &)
+	* Added FAT support for unlink() and rmdir()
 	* Started m68322
 
